# varryal-launcher

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
apps/shell/: package.json
apps/shell/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/shell/src-tauri/.cargo/: config.toml
apps/shell/src-tauri/capabilities/: default.json
apps/shell/src-tauri/icons/: icon.icns
apps/shell/src-tauri/src/: auth.rs  config.rs  dns_policy.rs  ipc_proxy.rs  jre.rs  lib.rs  main.rs  paths.rs  portal.rs  runner.rs
apps/ui/: index.html  package.json  pnpm-lock.yaml  tsconfig.test.json  vite.config.ts
apps/ui/src/: App.tsx  config.ts  main.tsx
apps/ui/src/components/: ParticleField.tsx  SceneBackdrop.tsx  SkinPreview.tsx  Titlebar.tsx
apps/ui/src/i18n/: en.json  index.ts  ru.json
apps/ui/src/ipc/: client.ts  types.ts
apps/ui/src/scenes/: CharacterSelect.tsx  Home.tsx  Launcher.tsx  Login.tsx  Running.tsx  ServerMenu.tsx  SettingsPanel.tsx  UpdateProgress.tsx
apps/ui/src/store/: auth.ts  download.ts  profiles.ts  run.ts  settings.ts
apps/ui/src/theme/: applyTheme.ts  global.css  theme.json
apps/ui/src/utils/: launcherState.ts  serialQueue.ts  version.ts
apps/ui/tests/: launcherState.test.mjs
bridge/: build.gradle.kts  proguard-keep.txt
bridge/src/main/java/ru/varryal/launcher/bridge/: BridgeRuntimeModule.java  BridgeRuntimeProvider.java  IpcDispatcher.java  SingleFlightFuture.java  WsBridgeServer.java  WsDownloadCallback.java  WsMainCallback.java  WsRunCallback.java
bridge/src/main/java/ru/varryal/launcher/bridge/config/: BridgeModuleConfig.java
bridge/src/test/java/ru/varryal/launcher/bridge/: SingleFlightFutureTest.java
docs/: BLOCKERS.md  CUTOVER-PLAN.md  IPC-PROTOCOL.md  PLAN.md  PORTAL-AUTH-ROLLBACK-TASK.md  PORTAL-WEBAUTH-TASK.md  PORTAL-WEBAUTH-V2-TASK.md  PROGRESS.md  REVIEW.md
docs/research/: gravit-architecture.md
